# This file is auto-generated from the current state of the database. Instead
# of editing this file, please use the migrations feature of Active Record to
# incrementally modify your database, and then regenerate this schema definition.
#
# Note that this schema.rb definition is the authoritative source for your
# database schema. If you need to create the application database on another
# system, you should be using db:schema:load, not running all the migrations
# from scratch. The latter is a flawed and unsustainable approach (the more migrations
# you'll amass, the slower it'll run and the greater likelihood for issues).
#
# It's strongly recommended that you check this file into your version control system.

ActiveRecord::Schema.define(version: 2018_10_29_122823) do

  # These are extensions that must be enabled in order to support this database
  enable_extension "plpgsql"

  create_table "categories", force: :cascade do |t|
    t.string "name"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
  end

  create_table "elements", force: :cascade do |t|
    t.string "name"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
  end

  create_table "elements_users", id: false, force: :cascade do |t|
    t.bigint "element_id", null: false
    t.bigint "user_id", null: false
    t.index ["element_id"], name: "index_elements_users_on_element_id"
    t.index ["user_id"], name: "index_elements_users_on_user_id"
  end

  create_table "user_introductions", force: :cascade do |t|
    t.bigint "user_id"
    t.bigint "category_id"
    t.bigint "element_id"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.index ["category_id"], name: "index_user_introductions_on_category_id"
    t.index ["element_id"], name: "index_user_introductions_on_element_id"
    t.index ["user_id"], name: "index_user_introductions_on_user_id"
  end

  create_table "users", force: :cascade do |t|
    t.string "name"
    t.string "email"
    t.datetime "created_at", null: false
    t.datetime "updated_at", null: false
    t.string "password_digest"
  end

  add_foreign_key "user_introductions", "categories"
  add_foreign_key "user_introductions", "elements"
  add_foreign_key "user_introductions", "users"
end
