@startuml

class User {
  id  : int
  name : string
  email  : string
  password_digest : string
}

class ElementsUsers {
  element_id : int
  user_id : int
}

class Element {
  id : int
  name : string
}

ElementsUsers  "多" o-- "1"  User 
ElementsUsers  "多" o-- "1"  Element 
Element "多" *--* "多" User

@enduml
